--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="design-cell">
                 <h3>A great eye for design and layout.</h3>
                 <br>
-                <p class="skills-p-1">I have been a musisicn for a long time and have put on live performances with
+                <p class="skills-p-1">I have been a musician for a long time and have put on live performances with
                     immersive atmosphere
                     and eye catching details. I also spend a lot of time in nature and like to blend these things into
                     everything I create.</p>
